Fixed overflow-y problem

--- a/css/style.scss
+++ b/css/style.scss
@@ -180,6 +180,11 @@ $mid_bar_pos: calc((#{$menu_height} - #{$bar_height} - #{$bar_padding}) / 2);
     }
   }
 }
+@media only screen and (max-height: 800px) {
+  :root {
+    overflow-y: visible;
+  }
+}
 @media only screen and (max-width: 992px) {
   .hide-on-med-and-down {
     // display: none !important;
